[package]
name = "shortener"
version = "0.1.0"
authors = ["Rached Mejri <r.mejri74100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
redis = "0.15.1"
rand = "0.7.3"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["serve"]